Maxence: Nginx conf pour video =< 1000Mo + Dockerfile

--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -1,21 +1,24 @@
+# Étape 1 : Construction de l'application React
 FROM node:alpine as builder
 
 WORKDIR /app
 
-COPY . .
-
-ARG REACT_APP_BACK_HOST=127.0.0.1
-ARG REACT_APP_BACK_PORT=8080
-ARG REACT_APP_HTTP=http
-
+# Copier le code source et les fichiers de configuration
+COPY video-uploader/ .
+COPY video-uploader/.env .env
+# Installer les dépendances
 RUN npm install
 
-RUN npm run build
+# Charger les variables d'environnement et exécuter le build
+RUN export $(cat .env | xargs) && npm run build
 
+# Étape 2 : Configuration de Nginx pour servir l'application
 FROM nginx:alpine
 
+# Copier les fichiers construits vers le dossier Nginx
 COPY --from=builder /app/build /usr/share/nginx/html
 
+# Exposer le port 80 pour le service web
 EXPOSE 80
 
-CMD [ "nginx", "-g", "daemon off;" ]
+CMD ["nginx", "-g", "daemon off;"]
