--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,18 @@ services:
       - "6379:6379"
     networks:
       - back-db
+      - back-redis-worker
+
+  worker:
+    build:
+      context: ./Backend
+      dockerfile: Dockerfile_worker
+    container_name: worker_redis
+    depends_on:
+      - redis
+    networks:
+      - back-redis-worker
+      - frontend-backend
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
@@ -38,14 +50,14 @@ services:
       context: ./Frontend
       dockerfile: Dockerfile
       args:
-        - REACT_APP_API_SEND_VIDEO # Passer la variable pendant le build
+        - REACT_APP_API_SEND_VIDEO
     container_name: react_app
     ports:
       - "80:80"
     env_file:
-      - ./Frontend/video-uploader/.env # Mettre à jour avec le bon chemin vers le fichier .env
+      - ./Frontend/video-uploader/.env
     volumes:
-      - ./Frontend/nginx.conf:/etc/nginx/nginx.conf # Monter la configuration personnalisée de Nginx
+      - ./Frontend/nginx.conf:/etc/nginx/nginx.conf
     networks:
       - frontend-backend
 
@@ -56,17 +68,19 @@ services:
     container_name: flask_api
     ports:
       - "8080:5000"
-      # - "5000:5000"
-    # env_file:
-    #   - .env
-    # depends_on:
-    #   - db
+    env_file:
+      - .env
+    depends_on:
+      - db
     networks:
       - back-db
       - frontend-backend
+      - back-redis-worker
+
 networks:
   frontend-backend:
   back-db:
+  back-redis-worker:
 
 volumes:
   db_data:
