--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3.8"
 services:
   db:
     image: mysql:8.0
+    platform: linux/amd64
     container_name: mysql_db
     env_file:
       - .env
@@ -23,6 +24,7 @@ services:
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
+    platform: linux/amd64
     container_name: phpmyadmin
     env_file:
       - .env
@@ -33,21 +35,7 @@ services:
     networks:
       - back-db
 
-  frontend:
-    build:
-      context: ./Frontend
-      dockerfile: Dockerfile
-      args:
-        - REACT_APP_API_SEND_VIDEO # Passer la variable pendant le build
-    container_name: react_app
-    ports:
-      - "80:80"
-    env_file:
-      - ./Frontend/video-uploader/.env # Mettre à jour avec le bon chemin vers le fichier .env
-    volumes:
-      - ./Frontend/nginx.conf:/etc/nginx/nginx.conf # Monter la configuration personnalisée de Nginx
-    networks:
-      - frontend-backend
+
 
   back:
     build:
